      metadata lookup and performed some minor optimizations.
    - Removed redundant floor in points::floatingPointToFixedPoint.
    - CMake now checks the minimum supported MSVC compiler for Windows.
    - Add gitignore to repository root.
    - CMake now only requires a CXX compiler.
    - Improved the Windows README instructions and various MSVC warnings.

    New features:
    - Added Grid::isTreeUnique() to tell if the tree is shared with another
      grid.
    - Added PointDataLeafNode::stealAttributeSet() and
      AttributeSet::removeAttribute() for releasing ownership of attribute
      data.

    Bug fixes:
    - Fixed a bug where grids with no active values might return true when the
      method evalActiveVoxelBoundingBox is called. The correct behavior is to
      only return true if the grid contains any active values.
    - Fixed a sign propagation bug in tools::traceExteriorBoundaries() used by
      tools::meshToVolume(). This could cause values to not be propagated across
      node boundaries, leading to voxels incorrectly being marked as inside the
      isosurface. [Contributed by Tristan Barback]
    - Fixed a bug in the CMake FindIlmBase/OpenEXR modules which could cause
      compilers on UNIX systems to fail to find stdlib.h if IlmBase/OpenEXR
      headers were installed to /usr/include.

    API changes:
    - Removed a number of deprecated point methods.
    - points::StringIndexType is now deprecated, use Index instead.
    - PointPartitioner::voxelOffsets() now returns a std::unique_ptr instead of
      a boost::scoped_array.

    Houdini:
    - Platonic SOP is now verbified.
    - Extend all SOP references to support VDB Points.


Version 7.0.0 - December 6, 2019

      Some changes in this release (see "ABI changes" below) alter
      the grid ABI so that it is incompatible with earlier versions
      of the OpenVDB library, such as the ones built into Houdini
      up to and including Houdini 18.0. To preserve ABI compatibility,