@@ -19,6 +19,7 @@ Version 7.1.0 - In Development
     - Add gitignore to repository root.
     - CMake now only requires a CXX compiler.
     - Improved the Windows README instructions and various MSVC warnings.
+    - Remove CMake warning when using GLFW 3.2+ on Debian.
 
     New features:
     - Added Grid::isTreeUnique() to tell if the tree is shared with another
